--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: app-jar
-        path: build/libs/*.jar
+        path: assignment/build/libs/*.jar
         retention-days: 1
 
   deploy-to-cloud:
