--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -104,7 +104,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
-        context: .
+        context: .assignment
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/webapp:latest,${{ secrets.DOCKERHUB_USERNAME }}/webapp:${{ github.sha }}
 
